@@ -26,7 +26,7 @@
         <maven.compiler.compilerVersion>21</maven.compiler.compilerVersion>
         <java.version>21</java.version>
         <skipTests>true</skipTests>
-        <hutool.version>5.8.32</hutool.version>
+        <hutool.version>5.8.38</hutool.version>
         <pinyin.version>2.0.3.RELEASE</pinyin.version>
         <pinyin4j.version>2.5.1</pinyin4j.version>
         <guava.version>32.1.1-jre</guava.version>
@@ -134,4 +134,28 @@
             </snapshots>
         </repository>
     </repositories>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <release>21</release>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
